5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4029/executions/1643_1055.log
== TEST (2019-04-14 22:25:07) 
-- CODE:
import math
v= float(input("Velocidade inicial: "))
a= float(input("Angulo: "))
d= float(input("Distancia entre o passaro e o porco: "))
x= 2 * a
g= float(9.8)
r= (((v ** 2) * (math.radians((math.sin(x)))/ g)
z= abs(d - r)
if ( d == 20 ):
	  p= "SIM"
else:
	  p= "NAO"
print(p)
-- ERROR:
File "XXXX", line 8
    z= abs(d - r)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:25:56) 
-- CODE:
import math
v= float(input("Velocidade inicial: "))
a= float(input("Angulo: "))
d= float(input("Distancia entre o passaro e o porco: "))
x= 2 * a
g= float(9.8)
r= (((v ** 2) * (math.radians((math.sin(x)))/ g)
z= abs(d - r)
if ( z == 20 ):
	  p= "SIM"
else:
	  p= "NAO"
print(p)
-- ERROR:
File "XXXX", line 8
    z= abs(d - r)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:15:11) 
-- CODE:
import math
v= float(input("Velocidade inicial: "))
a= float(input("Angulo: "))
d= float(input("Distancia entre o passaro e o porco: "))
x= 2 * a
g= 9.8
r= (((v ** 2) * (math.radians((math.sin(x)))/ g)
var=abs (d-r)	  
if ( var < 0.1 ):
	  p= "SIM"
else:
	  p= "NAO"
print(p)
-- ERROR:
File "XXXX", line 8
    var=abs (d-r)	  
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
